--- a/src/tendermint_client/Cargo.toml
+++ b/src/tendermint_client/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = { version = "1.0", default-features = false, features = ["alloc"]}
 serde = {version = "1.0", default-features = false, features = ["derive"]}
 prost = { version = "0.11", default-features = false }
 bytes = { version = "1.2.1", default-features = false }
+sha2 = { version = "0.10.6", default-features = false }
 
 tendermint-light-client-verifier = { version = "0.28.0", default-features = false }
 tendermint = { version = "0.28.0", default-features = false, features = ["clock"]}
@@ -30,6 +31,7 @@ std = [
     "serde/std",
     "serde_json/std",
     "bytes/std",
+    "sha2/std",
     "prost/std",
     "ibc/serde", 
     "ibc/serde_json", 
